Bug 310558 - 4.10: KMail crashes when displaying another e-mail message
Summary: 4.10: KMail crashes when displaying another e-mail message
Status: VERIFIED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-23 14:44 UTC by Jure Repinc
Modified: 2012-11-24 12:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jure Repinc 2012-11-23 14:44:16 UTC
Application: kmail (4.10 beta1)
KDE Platform Version: 4.9.80 (Compiled from sources)
Qt Version: 4.8.3
Operating System: Linux 3.7.0-rc5 x86_64
Distribution: "NAME=Gentoo"

-- Information about the crash:
- What I was doing when the application crashed:
I opened KMail, which loaded my e-mail from Inbox folder. Then I switched to another subfolder and click on first unread e-mail in it and Kmail crashed

The crash can be reproduced every time.

-- Backtrace:
Application: KMail (kmail), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7fd1a7b55780 (LWP 12020))]

Thread 4 (Thread 0x7fd1a319f700 (LWP 12024)):
#0  pthread_cond_wait () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:164
#1  0x000000398bb79954 in WTF::TCMalloc_PageHeap::scavengerThread (this=0x398c59a280 <WTF::pageheap_memory>) at wtf/FastMalloc.cpp:2495
#2  0x000000398bb79a69 in WTF::TCMalloc_PageHeap::runScavengerThread (context=<optimized out>) at wtf/FastMalloc.cpp:1618
#3  0x000000396c40901b in start_thread (arg=0x7fd1a319f700) at pthread_create.c:308
#4  0x000000396b8ea74d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:114

Thread 3 (Thread 0x7fd1a288e700 (LWP 12025)):
#0  0x000000396c40c24e in __pthread_mutex_unlock_usercnt (mutex=0x7fd19c000a60, decr=<optimized out>) at pthread_mutex_unlock.c:52
#1  0x000000396f886ab1 in g_mutex_unlock (mutex=mutex@entry=0x7fd19c0009a0) at gthread-posix.c:227
#2  0x000000396f84a395 in g_main_context_check (context=context@entry=0x7fd19c0009a0, max_priority=2147483647, fds=fds@entry=0x7fd19c0029c0, n_fds=n_fds@entry=1) at gmain.c:3021
#3  0x000000396f84a852 in g_main_context_iterate (context=context@entry=0x7fd19c0009a0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at gmain.c:3143
#4  0x000000396f84a9ec in g_main_context_iteration (context=0x7fd19c0009a0, may_block=1) at gmain.c:3207
#5  0x00000039711ac46e in QEventDispatcherGlib::processEvents (this=0x7fd19c0008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#6  0x000000397117c98f in QEventLoop::processEvents (this=this@entry=0x7fd1a288de70, flags=...) at kernel/qeventloop.cpp:149
#7  0x000000397117cc70 in QEventLoop::exec (this=0x7fd1a288de70, flags=...) at kernel/qeventloop.cpp:204
#8  0x000000397107f220 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#9  0x000000397108219c in QThreadPrivate::start (arg=0x2a23a90) at thread/qthread_unix.cpp:338
#10 0x000000396c40901b in start_thread (arg=0x7fd1a288e700) at pthread_create.c:308
#11 0x000000396b8ea74d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:114

Thread 2 (Thread 0x7fd1a13e3700 (LWP 12026)):
#0  pthread_cond_timedwait () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S:217
#1  0x00000039710826a2 in wait (time=30000, this=0x2bad4b0) at thread/qwaitcondition_unix.cpp:84
#2  QWaitCondition::wait (this=<optimized out>, mutex=0x2ba6698, time=30000) at thread/qwaitcondition_unix.cpp:158
#3  0x0000003971075d6e in QThreadPoolThread::run (this=0x2bba500) at concurrent/qthreadpool.cpp:141
#4  0x000000397108219c in QThreadPrivate::start (arg=0x2bba500) at thread/qthread_unix.cpp:338
#5  0x000000396c40901b in start_thread (arg=0x7fd1a13e3700) at pthread_create.c:308
#6  0x000000396b8ea74d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:114

Thread 1 (Thread 0x7fd1a7b55780 (LWP 12020)):
[KCrash Handler]
#6  ref (this=0x21) at /usr/include/qt4/QtCore/qatomic_x86_64.h:121
#7  QString (other=..., this=0x3881438) at /usr/include/qt4/QtCore/qstring.h:726
#8  node_construct (t=..., n=0x3881438, this=<optimized out>) at /usr/include/qt4/QtCore/qlist.h:373
#9  QList<QString>::append (this=this@entry=0x7fff0207d6a0, t=...) at /usr/include/qt4/QtCore/qlist.h:512
#10 0x00007fd1a014f881 in (anonymous namespace)::Formatter::format (this=this@entry=0x399cc70, bodyPart=bodyPart@entry=0x7fff0207daf0, writer=0x2a9b3b0, asyncResultObserver=asyncResultObserver@entry=0x2a0d7f0) at /var/tmp/portage/kde-base/kmail-9999/work/kmail-9999/plugins/messageviewer/bodypartformatter/text_vcard.cpp:100
#11 0x0000003010693cea in MessageViewer::ObjectTreeParser::parseObjectTreeInternal (this=this@entry=0x7fff0207db60, node=0x4e252d0, node@entry=0x5b5f5c0) at /var/tmp/portage/kde-base/kdepim-common-libs-9999/work/kdepim-common-libs-9999/messageviewer/objecttreeparser.cpp:328
#12 0x00000030106945cf in MessageViewer::ObjectTreeParser::stdChildHandling (this=this@entry=0x7fff0207ddd0, child=0x5b5f5c0) at /var/tmp/portage/kde-base/kdepim-common-libs-9999/work/kdepim-common-libs-9999/messageviewer/objecttreeparser.cpp:1458
#13 0x0000003010694980 in processMultiPartMixedSubtype (node=0x5654db0, this=0x7fff0207ddd0) at /var/tmp/portage/kde-base/kdepim-common-libs-9999/work/kdepim-common-libs-9999/messageviewer/objecttreeparser.cpp:1491
#14 MessageViewer::ObjectTreeParser::processMultiPartMixedSubtype (this=0x7fff0207ddd0, node=0x5654db0) at /var/tmp/portage/kde-base/kdepim-common-libs-9999/work/kdepim-common-libs-9999/messageviewer/objecttreeparser.cpp:1480
#15 0x0000003010694003 in MessageViewer::ObjectTreeParser::parseObjectTreeInternal (this=0x7fff0207ddd0, node=0x5654db0) at /var/tmp/portage/kde-base/kdepim-common-libs-9999/work/kdepim-common-libs-9999/messageviewer/objecttreeparser.cpp:353
#16 0x00000030106c8bb0 in MessageViewer::ViewerPrivate::parseContent (this=this@entry=0x2a0d7f0, content=0x5654db0) at /var/tmp/portage/kde-base/kdepim-common-libs-9999/work/kdepim-common-libs-9999/messageviewer/viewer_p.cpp:990
#17 0x00000030106ca39c in MessageViewer::ViewerPrivate::displayMessage (this=this@entry=0x2a0d7f0) at /var/tmp/portage/kde-base/kdepim-common-libs-9999/work/kdepim-common-libs-9999/messageviewer/viewer_p.cpp:862
#18 0x00000030106ca881 in MessageViewer::ViewerPrivate::updateReaderWin (this=0x2a0d7f0) at /var/tmp/portage/kde-base/kdepim-common-libs-9999/work/kdepim-common-libs-9999/messageviewer/viewer_p.cpp:2223
#19 0x00000030106cd60a in MessageViewer::ViewerPrivate::qt_static_metacall (_o=0x2a0d7f0, _c=1900927032, _id=33, _a=0x1) at /var/tmp/portage/kde-base/kdepim-common-libs-9999/work/kdepim-common-libs-9999_build/messageviewer/viewer_p.moc:234
#20 0x00000039711947ff in QMetaObject::activate (sender=0x2a0d880, m=<optimized out>, local_signal_index=<optimized out>, argv=0x0) at kernel/qobject.cpp:3547
#21 0x000000397119277c in QObject::event (this=0x2a0d880, e=<optimized out>) at kernel/qobject.cpp:1157
#22 0x0000003974bdbdac in QApplicationPrivate::notify_helper (this=this@entry=0x2484ed0, receiver=receiver@entry=0x2a0d880, e=e@entry=0x7fff0207e810) at kernel/qapplication.cpp:4557
#23 0x0000003974be0216 in QApplication::notify (this=0x7fff0207ee20, receiver=0x2a0d880, e=0x7fff0207e810) at kernel/qapplication.cpp:3939
#24 0x0000003000a54248 in KApplication::notify (this=0x7fff0207ee20, receiver=0x2a0d880, event=0x7fff0207e810) at /var/tmp/portage/kde-base/kdelibs-9999/work/kdelibs-9999/kdeui/kernel/kapplication.cpp:311
#25 0x000000397117dc8d in QCoreApplication::notifyInternal (this=0x7fff0207ee20, receiver=0x2a0d880, event=0x7fff0207e810) at kernel/qcoreapplication.cpp:915
#26 0x00000039711aea72 in sendEvent (event=0x7fff0207e810, receiver=<optimized out>) at kernel/qcoreapplication.h:231
#27 QTimerInfoList::activateTimers (this=0x24725b0) at kernel/qeventdispatcher_unix.cpp:611
#28 0x00000039711abde4 in timerSourceDispatch (source=<optimized out>) at kernel/qeventdispatcher_glib.cpp:186
#29 timerSourceDispatch (source=source@entry=0x2472550) at kernel/qeventdispatcher_glib.cpp:180
#30 0x000000396f84a5b4 in g_main_dispatch (context=0x246dc20) at gmain.c:2539
#31 g_main_context_dispatch (context=context@entry=0x246dc20) at gmain.c:3075
#32 0x000000396f84a924 in g_main_context_iterate (context=context@entry=0x246dc20, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at gmain.c:3146
#33 0x000000396f84a9ec in g_main_context_iteration (context=0x246dc20, may_block=1) at gmain.c:3207
#34 0x00000039711ac444 in QEventDispatcherGlib::processEvents (this=0x2340ad0, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#35 0x0000003974c7ca86 in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#36 0x000000397117c98f in QEventLoop::processEvents (this=this@entry=0x7fff0207eaa0, flags=...) at kernel/qeventloop.cpp:149
#37 0x000000397117cc70 in QEventLoop::exec (this=0x7fff0207eaa0, flags=...) at kernel/qeventloop.cpp:204
#38 0x0000003971181948 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1187
#39 0x0000000000403192 in main (argc=<optimized out>, argv=<optimized out>) at /var/tmp/portage/kde-base/kmail-9999/work/kmail-9999/kmail/main.cpp:148

Reported using DrKonqi
Comment 1 Laurent Montel 2012-11-23 15:38:43 UTC
Git commit e13dae77891659b1a57dd4506a27b12d5d841881 by Montel Laurent.
Committed on 23/11/2012 at 16:38.
Pushed by mlaurent into branch 'master'.

Fix Bug 310558 - 4.10: KMail crashes when displaying another e-mail

message
FIXED-IN: 4.10

M  +3    -1    plugins/messageviewer/bodypartformatter/text_vcard.cpp

http://commits.kde.org/kdepim/e13dae77891659b1a57dd4506a27b12d5d841881
Comment 2 Jure Repinc 2012-11-24 00:50:09 UTC
I just updated source and recompiled and it looks like it now goes past the format function, but then it crashes in somewhere further on. I opened a new bug 310583