Fix Bug 310558 - 4.10: KMail crashes when displaying another e-mail

message
FIXED-IN: 4.10
BUG: 310558