plugins/messageviewer/bodypartformatter/text_vcard.cpp
@@ -97,7 +97,9 @@ class Formatter : public MessageViewer::Interface::BodyPartFormatter
           continue;
         }
         if(!memento) {
-          lst.append(a.emails().first());
+	  if(!a.emails().isEmpty()) {
+            lst.append(a.emails().first());
+	  }
         }
         count++;
       }
